--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -19,25 +19,42 @@ recent <- read_csv("../data/recent.csv")
 # Combine and preprocess
 exchange_data <- bind_rows(history, recent) %>%
   mutate(date = ymd(date))
-```
 
-## Exchange Rates against the Euro {.tabset}
-
-```{r}
 common_currencies <- c("AUD", "CAD", "CHF", "CZK", "DKK", "GBP", "HKD",
                        "HUF", "JPY", "KRW", "NOK", "NZD", "PLN", "SEK",
                        "SGD", "USD", "ZAR")
+
+# Log returns
+exchange_returns <- exchange_data %>%
+  filter(currency %in% common_currencies) %>%
+  group_by(currency) %>%
+  arrange(date) %>%
+  mutate(log_return = log(rate) - lag(log(rate))) %>%
+  ungroup()
 ```
+
+## Exchange Rate Time Series (EUR as Base Currency) {.tabset}
 
 ```{r, results='asis', echo=FALSE, warning=FALSE, message=FALSE}
 for (cur in common_currencies) {
   cat("### ", cur, "\n\n")
+
+  cat("#### Exchange Rate\n\n")
   print(
     ggplot(exchange_data %>% filter(currency == cur), aes(x = date, y = rate)) +
       geom_line(color = "steelblue") +
       labs(title = paste(cur, "Exchange Rate Over Time"), x = "Date", y = "Rate (Base: EUR)") +
       theme_minimal()
   )
+
+  cat("\n\n#### Log Returns\n\n")
+  print(
+    ggplot(exchange_returns %>% filter(currency == cur), aes(x = date, y = log_return)) +
+      geom_line(color = "tomato") +
+      labs(title = paste(cur, "Daily Log Returns"), x = "Date", y = "Log Return") +
+      theme_minimal()
+  )
+
   cat("\n\n")
 }
 ```
