--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -16,34 +16,52 @@ library(forecast)
 library(prophet)
 library(xgboost)
 library(zoo)
+library(lmtest)
+library(tibble)
+library(dplyr)
 
 history <- read_csv("../data/history.csv") %>% drop_na()
 recent <- read_csv("../data/recent.csv")
+
+common_currencies <- c("USD", "KRW", "GBP", "JPY", "AUD", "CAD", "CHF")
 
 exchange_data <- bind_rows(history, recent) %>%
   mutate(date = ymd(date)) %>%
   arrange(date)
 
-common_currencies <- c("USD", "KRW")
+log_returns <- exchange_data %>%
+  filter(currency %in% common_currencies) %>%
+  arrange(currency, date) %>%
+  group_by(currency) %>%
+  mutate(log_return = log(rate / lag(rate))) %>%
+  ungroup() %>%
+  select(date, currency, log_return) %>%
+  pivot_wider(names_from = currency, values_from = log_return)
 
 run_forecasts <- function(data, currency_code) {
-  df <- data %>% filter(currency == currency_code) %>%
+  df <- data %>% 
+    filter(currency == currency_code) %>%
     arrange(date) %>%
-    mutate(date_num = as.numeric(date),
-           weekday = wday(date),
-           month = month(date))
+    mutate(
+      date_num = as.numeric(date),
+      weekday = wday(date),
+      month = month(date)
+    )
 
+  # Create lag features for XGBoost
   for (i in 1:5) {
     df[[paste0("lag_", i)]] <- lag(df$rate, i)
   }
   df <- df %>% drop_na()
 
+  # Train XGBoost model
   xgb_matrix <- xgb.DMatrix(
     data = as.matrix(df %>% select(starts_with("lag_"), date_num, weekday, month)),
     label = df$rate
   )
   model_xgb <- xgboost(data = xgb_matrix, nrounds = 100, objective = "reg:squarederror", verbose = 0)
 
+  # Generate XGBoost forecasts
   future_dates <- seq(max(df$date) + 1, by = "day", length.out = 7)
   lags <- tail(df$rate, 5)
   preds <- numeric(7)
@@ -62,20 +80,28 @@ run_forecasts <- function(data, currency_code) {
 
   xgb_df <- tibble(date = future_dates, predicted = preds)
 
+  # ARIMA forecast
   ts_data <- ts(df$rate)
   arima_model <- auto.arima(ts_data)
   arima_fc <- forecast(arima_model, h = 7)
   arima_df <- tibble(date = future_dates, predicted = as.numeric(arima_fc$mean))
 
+  # Prophet forecast
   prophet_df <- df %>% select(ds = date, y = rate)
   model_prophet <- prophet(prophet_df)
   future_df <- make_future_dataframe(model_prophet, periods = 7)
   prophet_fc <- predict(model_prophet, future_df)
-
+  
+  # Extract only the last 7-day forecast
+  prophet_df_final <- prophet_fc %>%
+    filter(ds > max(df$date)) %>%
+    select(date = ds, predicted = yhat)
+  
   return(list(
-    xgb = xgb_df,
+    xgboost = xgb_df,
     arima = arima_df,
-    prophet = list(model = model_prophet, forecast = prophet_fc),
+    prophet = prophet_df_final,
+    prophet_full = prophet_fc,
     raw = df
   ))
 }
@@ -97,16 +123,19 @@ plot_visualization <- function(currency_code) {
          x = "Date", y = "Rate")
 }
 
-
 plot_log_return <- function(currency_code) {
   raw_data <- results[[currency_code]]$raw %>%
     arrange(date) %>%
     mutate(log_return = log(rate / lag(rate))) %>%
-    filter(!is.na(log_return))  # NA 제거
+    filter(!is.na(log_return))  # Remove NA values
 
   ggplot(raw_data, aes(x = date, y = log_return)) +
     geom_line(color = "darkred") +
-    labs(title = paste("Log Return of", currency_code), x = "Date", y = "Log Return")
+    labs(
+      title = paste("Log Return of", currency_code),
+      x = "Date",
+      y = "Log Return"
+    )
 }
 
 plot_xgboost_forecast <- function(currency_code, recent_months = 1) {
@@ -119,7 +148,7 @@ plot_xgboost_forecast <- function(currency_code, recent_months = 1) {
     labs(title = paste("XGBoost Forecast for", currency_code))
 }
 
-plot_arima_forecast <- function(currency_code, recent_days = 7) {
+plot_arima_forecast <- function(currency_code, recent_days = 21) {
   raw_data <- results[[currency_code]]$raw
   pred_data <- results[[currency_code]]$arima
   ggplot() +
@@ -146,6 +175,47 @@ plot_recent_prophet <- function(forecast_df, history_df, days_before = 21) {
     labs(title = "Prophet Forecast (Recent)", x = "Date", y = "Rate")
 }
 
+run_granger_analysis <- function(log_returns, currencies, max_lag = 3) {
+  results <- expand.grid(from = currencies, to = currencies) %>%
+    filter(from != to) %>%
+    rowwise() %>%
+    mutate(
+      p_value = tryCatch({
+        grangertest(log_returns[[to]] ~ log_returns[[from]], order = max_lag)$`Pr(>F)`[2]
+      }, error = function(e) NA_real_)
+    ) %>%
+    ungroup() %>%
+    arrange(p_value)
+
+  return(results)
+}
+
+plot_granger_heatmap <- function(granger_results, currencies) {
+  library(ggplot2)
+  
+  # Convert to matrix format for heatmap
+  heatmap_data <- granger_results %>%
+    complete(from = currencies, to = currencies, fill = list(p_value = NA)) %>%
+    pivot_wider(names_from = to, values_from = p_value) %>%
+    column_to_rownames("from") %>%
+    as.matrix()
+  
+  # Reshape for ggplot
+  heatmap_df <- as.data.frame(as.table(heatmap_data))
+  colnames(heatmap_df) <- c("From", "To", "P_value")
+  
+  ggplot(heatmap_df, aes(x = To, y = From, fill = P_value)) +
+    geom_tile(color = "white") +
+    scale_fill_gradient(low = "red", high = "white", na.value = "grey90") +
+    labs(
+      title = "Granger Causality P-Value Heatmap",
+      x = "To (Dependent Variable)",
+      y = "From (Independent Variable)",
+      fill = "p-value"
+    ) +
+    theme_minimal() +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
+}
 
 
 results <- list()
@@ -164,11 +234,6 @@ plot_visualization("USD")
 plot_log_return("USD")
 ```
 
-### XGBoost
-```{r}
-plot_xgboost_forecast("USD")
-```
-
 ### ARIMA
 ```{r}
 plot_arima_forecast("USD")
@@ -176,6 +241,24 @@ plot_arima_forecast("USD")
 
 ### Prophet
 ```{r}
-plot_recent_prophet(results$USD$prophet$forecast, results$USD$raw)
+plot_recent_prophet(results$USD$prophet_full, results$USD$raw)
+```
+
+### XGBoost
+```{r}
+plot_xgboost_forecast("USD")
+```
+
+
+# Granger Causality Analysis {.tabset}
+```{r}
+# Run Granger causality analysis after computing log returns
+granger_results <- run_granger_analysis(log_returns, common_currencies, max_lag = 3)
+
+# Display only statistically significant results
+granger_results %>% filter(p_value < 0.05)
+
+# Plot p-value heatmap
+plot_granger_heatmap(granger_results, common_currencies)
 ```
 
